--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.95.3",
     "@vercel/postgres": "^0.10.0",
     "express": "^5.2.1",
     "next": "^16.1.6",
